--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "author": "Ronald Manzano",
   "proxy": "http://localhost:3001",
+  "license": "MIT",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
